# -onyx-browser

.github/workflows/: build.yml
privacy-browser/: .gitignore  PROJECT_DOCUMENTATION.md  README.md  index.html  package-lock.json  package.json  tauri.conf.json  tsconfig.json  vite.config.ts
privacy-browser/.github/workflows/: build.yml
privacy-browser/icons/: manifest.json
privacy-browser/src/: App.vue
privacy-browser/src-tauri/: Cargo.toml
privacy-browser/src-tauri/src/: adblock_engine.rs  ai_assistant.rs  bookmarks.rs  downloads.rs  extensions.rs  history.rs  main.rs  password_manager.rs  privacy.rs  scriptlet_engine.rs  settings.rs  sync.rs  tabs.rs
privacy-browser/src-tauri/src/scriptlets/: amp-to-html.js  anti-adblock-killer.js  anti-fingerprint.js  generic-ad-block.js  invidious-redirect.js  libredirect.js  nitter-redirect.js  sponsorblock.js  strip-tracking-params.js  youtube-ad-block-requests.js  youtube-ad-hide-ui.js  youtube-ad-skip.js  youtube-ads.js  youtube-skip-ads.js
privacy-browser/src/components/: AIAssistantPanel.vue  AIDemo.vue  AdBlockDemo.vue  AddressBar.vue  CertificateChain.vue  CertificateDetails.vue  CertificateExtensions.vue  CertificateGeneral.vue  CertificateTransparency.vue  CertificateViewer.vue  CommandPalette.vue  ContainerDemo.vue  ContainerTabsManager.vue  ContainerType.vue  CookieManager.vue  DemoCard.vue  HSTSManager.vue  Onboarding.vue  PasswordManager.vue  PrivacyDemo.vue  ReaderMode.vue  SettingsPanel.vue  ShortcutsCheatsheet.vue  Sidebar.vue  SitePermissionsManager.vue  TabBar.vue  TabGroups.vue  Toast.vue  WebView.vue  WorkspaceDemo.vue  WorkspaceManager.vue
privacy-browser/src/composables/: useAIAssistant.ts  useAdBlock.ts  useBookmarks.ts  (+22 more)
(+12 files in other folders)
