[package]
name = "onyx"
version = "1.0.0"
description = "A privacy-focused browser built with Tauri"
authors = ["Onyx Browser Team"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
  "macros",
  "webview",
  "dialog-all",
  "shell-all",
  "fs-all",
  "opener",
  "clipboard-manager",
  "global-shortcut",
  "single-instance",
  "autostart",
  "notification",
  "process",
  "updater",
  "log",
  "store",
  "http",
] }

tauri-plugin-log = { version = "2", features = ["tracing"] }
tauri-plugin-store = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde", "fast-rng"] }
url = "2"
dirs = "5"
base64 = "0.22"
mime = "0.3"
mime_guess = "2"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
parking_lot = "0.12"
dashmap = "5.5"
lru = "0.10"
semver = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"